--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Mini-Bank-Project
 server.port = 8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/simple_bank_db
-spring.datasource.username=postgres
-spring.datasource.password=yosaka
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.url=jdbc:postgresql://localhost:5432/simple_bank_db
+#spring.datasource.username=postgres
+#spring.datasource.password=yosaka
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
